# todo_app_full_backend

./: .gitignore  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  setting.py
app/: auth.py  crud.py  database.py  logging_config.py  main.py  models.py  schemas.py
