[project]
name = "backend-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "myapplication>=0.1.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-jose>=3.5.0",
    "requests-oauthlib>=2.0.0",
    "sqlalchemy>=2.0.50",
]
